# ai_playground

./: README.md  main.py  pyproject.toml
ai_playground/: merge_ner_results.py  model.py
pseudo_ai/: merge_ner_results.py  model.py  pseudonymize.py
tests/: test_merge_ner_results.py  test_pseudonymize.py
