[tool.poetry]
name = "pseudo-ai"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <info@busykoala.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.0"
pandas = "^2.2.3"
torch = "^2.5.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
langchain-huggingface = "^0.1.2"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
